@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.563 2009-07-02 03:31:35 remko Exp $
+	$Id: ChangeLog,v 1.564 2009-07-02 04:24:55 guru Exp $
 -----------------------------------------------------------------------------------------
 
 2009-07-02	remko
@@ -7,6 +7,8 @@
 
 2009-07-01	pwessel
 	* mgd77/mgd77sniffer.c:	Did not reset the E(77) structure between cruises.
+	* mgd77/mgd77list.c:	Modifier -At added which attempts to create fake cruise times
+				based on header information and distance along track.
 
 2009-06-30	pwessel
 	* grdfilter.c:		Toggle -T was not processed correctly if -Rgridfile was given.
